--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     <form class="homeSearch" action="">
                         <i class='bx bxs-map'></i>
-                        <input type="search" placeholder="Search by Loctaion..." class="homeSearchInput">
+                        <input type="search" placeholder="Search by Location..." class="homeSearchInput">
                         <button class="button">Search</button>
                     </form>
 
